k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mm.com
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: backend-svc
            port:
              number: 8080
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
